update for cmeel 0.23

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = ["cmeel-boost", "cmeel-eigen"]
 [project.urls]
 homepage = "https://github.com/stack-of-tasks/eiquadprog"
 
+[tool.cmeel]
+build-number = 1
+
 [build-system]
 requires = ["cmeel[build]", "cmeel-eigen", "cmeel-boost"]
 build-backend = "cmeel.build"
-build-number = 1
