--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,65 +5,63 @@ on:
     tags:
       - "v*"
 
+env:
+  CMEEL_LOG_LEVEL: DEBUG
+
 jobs:
-  build_wheels:
-    name: "Build ${{ matrix.build }} wheels on ${{ matrix.os }} ${{ matrix.arch }}"
-    runs-on: "${{ matrix.os }}-latest"
+  linux:
+    name: "${{ matrix.image }} ${{ matrix.arch }}"
+    runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        os: ["ubuntu", "macos"]
-        arch: ["x86_64"]
-        build: ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "pp37-*", "pp38-*", "pp39-*"]
-        include:
-          - arch: "aarch64"
-            os: "ubuntu"
-            build: "cp37-manylinux*"
-          - arch: "aarch64"
-            os: "ubuntu"
-            build: "cp38-manylinux*"
-          - arch: "aarch64"
-            os: "ubuntu"
-            build: "cp39-manylinux*"
-          - arch: "aarch64"
-            os: "ubuntu"
-            build: "cp310-manylinux*"
-          - arch: "aarch64"
-            os: "ubuntu"
-            build: "cp311-manylinux*"
+        image: ["manylinux2014", "musllinux_1_1"]
+        arch: ["x86_64", "aarch64"]
+        exclude:
+          - image: "musllinux_1_1"
+            arch: "aarch64"
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: 'true'
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Set up QEMU
         if: matrix.arch == 'aarch64'
         uses: docker/setup-qemu-action@v2
         with:
           platforms: all
       - run: python -m pip install -U pip
-      - run: python -m pip install cibuildwheel
-      - run: touch setup.py
-      - run: python -m cibuildwheel --output-dir wh
-        env:
-          CIBW_BUILD: ${{ matrix.build }}
-          CIBW_ARCHS: ${{ matrix.arch }}
-          CIBW_MANYLINUX_X86_64_IMAGE: "quay.io/pypa/manylinux2014_x86_64"
-          CIBW_MANYLINUX_PYPY_X86_64_IMAGE: "quay.io/pypa/manylinux2014_x86_64"
-          CIBW_MANYLINUX_AARCH64_IMAGE: "quay.io/pypa/manylinux_2_28_aarch64"
-          CIBW_REPAIR_WHEEL_COMMAND: ""
+      - run: python -m pip install cmeel
+      - run: python -m cmeel docker -Ui "quay.io/pypa/${{ matrix.image }}_${{ matrix.arch }}"
       - uses: actions/upload-artifact@v3
         with:
           path: wh
+
+  macos:
+    name: "macos"
+    runs-on: "macos-10.15"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'true'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - run: python -m pip install -U pip
+      - run: python -m pip wheel -vw wh .
+      - uses: actions/upload-artifact@v3
+        with:
+          path: wh
+
   release:
-    needs: ["build_wheels"]
+    needs: ["linux", "macos"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/download-artifact@v3
       - run: python -m pip install twine
-      - run: python -m twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/*
+      - run: python -m twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.yml
