--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
     strategy:
       matrix:
         image: ["manylinux2014", "musllinux_1_1"]
-        arch: ["x86_64", "aarch64"]
-        exclude:
-          - image: "musllinux_1_1"
+        arch: ["x86_64"]
+        include:
+          - image: "manylinux_2_28"
             arch: "aarch64"
     steps:
       - uses: actions/checkout@v3
