--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        image: ["manylinux2014", "musllinux_1_1"]
-        arch: ["x86_64"]
-        include:
-          - image: "manylinux_2_28"
+        image: ["manylinux_2_28", "musllinux_1_1"]
+        arch: ["x86_64", "aarch64"]
+        exclude:
+          - image: "musllinux_1_1"
             arch: "aarch64"
     steps:
       - uses: actions/checkout@v3
@@ -40,7 +40,7 @@ jobs:
 
   macos:
     name: "macos"
-    runs-on: "macos-10.15"
+    runs-on: "macos-latest"
     steps:
       - uses: actions/checkout@v3
         with:
