ci: update cirrus

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,16 +7,16 @@ macos_arm64_task:
     image: ghcr.io/cirruslabs/macos-monterey-xcode
   env:
     CIRRUS_CLONE_SUBMODULES: true
-    CIBW_REPAIR_WHEEL_COMMAND: ""
+    CMEEL_LOG_LEVEL: DEBUG
     PATH: /opt/homebrew/opt/python@3.10/bin:$PATH
   install_pre_requirements_script:
     - brew install python@3.10
     - ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
-  install_cibuildwheel_script:
+  install_deps_script:
     - python -m pip install -U pip
     - python -m pip install cibuildwheel twine
-  run_cibuildwheel_script:
-    - cibuildwheel
+  run_wheel_script:
+    - python -m pip wheel -vw wh .
   publish_script:
     - python -m twine upload -u __token__ wheelhouse/eiquadprog*.whl
   wheels_artifacts:
