--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,17 +23,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: 'true'
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
       - name: Set up QEMU
         if: matrix.arch == 'aarch64'
         uses: docker/setup-qemu-action@v2
         with:
           platforms: all
-      - run: python -m pip install -U pip
-      - run: python -m pip install cmeel
-      - run: python -m cmeel docker -Ui "quay.io/pypa/${{ matrix.image }}_${{ matrix.arch }}"
+      - run: pipx install cmeel
+      - run: cmeel docker -Ui "quay.io/pypa/${{ matrix.image }}_${{ matrix.arch }}"
       - uses: actions/upload-artifact@v3
         with:
           path: wh
@@ -59,9 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
       - uses: actions/download-artifact@v3
-      - run: python -m pip install twine
-      - run: python -m twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.whl
+      - run: pipx install twine
+      - run: twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.whl
