--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 build-backend = "cmeel"
-requires = ["cmeel-boost ~= 1.83.0", "cmeel-eigen", "cmeel[build]"]
+requires = ["cmeel-boost ~= 1.83.0", "cmeel-eigen >= 3.4.0.2", "cmeel[build]"]
 
 [project]
-dependencies = ["cmeel-boost ~= 1.83.0", "cmeel-eigen"]
+dependencies = ["cmeel-boost ~= 1.83.0"]
 description = "C++ implementations of the algorithm of Goldfarb and Idnani for the solution of a (convex) QP"
 license = "LGPL-3.0-or-later"
 name = "eiquadprog"
