--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,11 @@ on:
   push:
     tags:
       - "v*"
+    branches:
+      - main
+  pull_request_target:
+    branches:
+      - main
 
 env:
   CMEEL_LOG_LEVEL: DEBUG
@@ -20,12 +25,12 @@ jobs:
           - image: "musllinux_1_1"
             arch: "aarch64"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: 'true'
       - name: Set up QEMU
         if: matrix.arch == 'aarch64'
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
         with:
           platforms: all
       - run: pipx install cmeel
@@ -50,11 +55,39 @@ jobs:
         with:
           path: wh
 
-  release:
-    needs: ["linux", "macos"]
+  sdist:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - name: setup
+        run: |
+          python -m pip install -U pip
+          python -m pip install build cmeel[build] cmeel-boost cmeel-eigen
+      - name: build sdist
+        run: python -m build -nso dist .
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist
+
+  release:
+    needs: ["linux", "macos", "sdist"]
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref_name }}
+      - run: curl https://github.com/nim65s.gpg | gpg --import
+      - name: validate signature
+        run: >
+          git verify-tag --raw ${{ github.ref_name }} 2>&1
+          | grep -q 'VALIDSIG 9B1A79065D2F2B806C8A5A1C7D2ACDAF4653CF28'
       - uses: actions/download-artifact@v3
       - run: pipx install twine
       - run: twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.whl
+      - run: twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.tar.gz || true
