--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - "v*"
     branches:
       - cmeel
-  pull_request_target:
+  pull_request:
     branches:
       - cmeel
 
@@ -14,70 +14,85 @@ env:
   CMEEL_LOG_LEVEL: DEBUG
 
 jobs:
-  linux:
-    name: "${{ matrix.image }} ${{ matrix.arch }}"
-    runs-on: "ubuntu-latest"
+  wheel:
+    name: "Build ${{ matrix.python }} ${{ matrix.os }}"
+    runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        image: ["manylinux_2_28", "musllinux_1_1"]
-        arch: ["x86_64", "aarch64"]
-        exclude:
-          - image: "musllinux_1_1"
-            arch: "aarch64"
+        os: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]
+        python: ["cp313"]
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - name: Set up QEMU
-        if: matrix.arch == 'aarch64'
-        uses: docker/setup-qemu-action@v3
+      - run: pipx install cibuildwheel
+      - run: cibuildwheel
+        env:
+          CIBW_BUILD: "${{ matrix.python }}-*"
+          CIBW_MANYLINUX_X86_64_IMAGE: "quay.io/pypa/manylinux_2_28_x86_64"
+          CIBW_MANYLINUX_AARCH64_IMAGE: "quay.io/pypa/manylinux_2_28_aarch64"
+          CIBW_REPAIR_WHEEL_COMMAND: ""
+          CIBW_ENVIRONMENT: CMEEL_LOG_LEVEL="DEBUG"
+      - uses: actions/upload-artifact@v4
         with:
-          platforms: all
-      - run: pipx install cmeel
-      - run: cmeel docker -Ui "quay.io/pypa/${{ matrix.image }}_${{ matrix.arch }}"
-      - uses: actions/upload-artifact@v3
-        with:
-          path: wh
+          name: "artifact-${{ matrix.os }}-${{ matrix.python }}"
+          path: wheelhouse
 
-  macos:
-    name: "macos"
-    runs-on: "macos-latest"
+  test:
+    needs: ["wheel"]
+    name: "Test ${{ matrix.python }} ${{ matrix.os }}"
+    runs-on: "${{ matrix.os }}"
+    strategy:
+      matrix:
+        os: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]
+        python: ["cp313"]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
-          submodules: 'true'
-      - uses: actions/setup-python@v4
+          name: "artifact-${{ matrix.os }}-${{ matrix.python }}"
+          path: wheelhouse
+      - run: echo "${{ matrix.python }}" | sed "s/cp3/PYTHON_VERSION=3./" >> "${GITHUB_ENV}"
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-      - run: python -m pip install -U pip
-      - run: python -m pip wheel -vw wh .
-      - uses: actions/upload-artifact@v3
-        with:
-          path: wh
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: index
+        run: |
+          python -m pip install -U pip
+          python -m pip install wheel simple503
+          python -m simple503 --base-url ${{ github.workspace }}/wheelhouse ${{ github.workspace }}/wheelhouse
+      - name: install deps
+        run: python -m pip install build cmeel[build] cmeel-boost cmeel-eigen
+      - name: install wheel
+        run: python -m pip install -i "file://${{ github.workspace }}/wheelhouse" cmeel-tinyxml2
 
   sdist:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.13
       - name: setup
         run: |
           python -m pip install -U pip
           python -m pip install build cmeel[build] cmeel-boost cmeel-eigen
       - name: build sdist
         run: python -m build -nso dist .
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: artifact-sdist
           path: dist
 
   release:
-    needs: ["linux", "macos", "sdist"]
+    needs: ["test", "sdist"]
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+    environment: release
+    permissions:
+      id-token: write
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -87,7 +102,15 @@ jobs:
         run: >
           git verify-tag --raw ${{ github.ref_name }} 2>&1
           | grep -q 'VALIDSIG 9B1A79065D2F2B806C8A5A1C7D2ACDAF4653CF28'
-      - uses: actions/download-artifact@v3
-      - run: pipx install twine
-      - run: twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.whl
-      - run: twine upload -u __token__ -p "${{ secrets.PYPI_TOKEN }}" artifact/eiquadprog*.tar.gz || true
+      - uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: dist
+      - run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+      - run: gh release create -t "Release ${{ env.TAG}}" "${{ env.TAG }}" dist/cmeel_tinyxml2*.{whl,tar.gz}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          skip-existing: true
